modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/parser/errors/multiple_number_separators.gd
func test():
	# Number separators may not be placed right next to each other.
	var _num = 1__23
